force-app/main/default/objects/Transaction__c/fields/Account_Exist__c.field-meta.xml
<CustomField>
    <fullName>Account_Exist__c</fullName>
    <formula>IF ( ISBLANK(  Account__c  )= TRUE, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Exist</label>
    <type>Checkbox</type>
</CustomField>