force-app/main/default/objects/Transaction__c/fields/account_record_Type__c.field-meta.xml
<CustomField>
    <fullName>account_record_Type__c</fullName>
    <formula>Account__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account record type</label>
    <type>Text</type>
</CustomField>