force-app/main/default/objects/Transaction__c/fields/Account_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Type__c</fullName>
    <formula>text(Account__r.Sub_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sub Type</label>
    <type>Text</type>
</CustomField>