force-app/main/default/objects/Transaction__c/fields/account_type__c.field-meta.xml
<CustomField>
    <fullName>account_type__c</fullName>
    <formula>text(Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>account type</label>
    <type>Text</type>
</CustomField>