force-app/main/default/objects/Transaction__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <label>Accounting Period</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Effective_Date__c</field>
            <operation>greaterOrEqual</operation>
            <valueField>Accounting_Period__c.Start_Date__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Effective_Date__c</field>
            <operation>lessOrEqual</operation>
            <valueField>Accounting_Period__c.End_Date__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Accounting_Period__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>