force-app/main/default/objects/Transaction__c/fields/accounting_period_calculated__c.field-meta.xml
<CustomField>
    <fullName>accounting_period_calculated__c</fullName>
    <formula>text(year(Effective_Date__c)) + &apos;-&apos; +  lpad(text(month(Effective_Date__c)),2,&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>accounting period calculated</label>
    <type>Text</type>
</CustomField>