force-app/main/default/objects/Transaction__c/fields/agent__c.field-meta.xml
<CustomField>
    <fullName>agent__c</fullName>
    <formula>Account__r.Agent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>agent</label>
    <type>Text</type>
</CustomField>