force-app/main/default/objects/Transaction__c/fields/Amount_SGD_equiv__c.field-meta.xml
<CustomField>
    <fullName>Amount_SGD_equiv__c</fullName>
    <description>Amount SGD equiv based on the FX rate at the date of creation ( fixed )</description>
    <label>Amount SGD equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>