force-app/main/default/objects/Transaction__c/fields/amount_USD_equiv__c.field-meta.xml
<CustomField>
    <fullName>amount_USD_equiv__c</fullName>
    <formula>Amount__c *

case ( CCY__c ,&apos;USD&apos;,1,
              &apos;EUR&apos;, Account__r.Marketplace_for_EUR_FX_rate__r.latest_to_usd_rate__c ,
              &apos;SGD&apos;, Account__r.Marketplace_for_SGD_FX_rate__r.latest_to_usd_rate__c ,
              &apos;GBP&apos;, Account__r.Marketplace_for_GBP_FX_rate__r.latest_to_usd_rate__c ,
              &apos;HKD&apos;, (1/7.8),
              0
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>amount USD equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>