force-app/main/default/objects/Transaction__c/fields/Amount_USD_Equiv_daily_fx__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD_Equiv_daily_fx__c</fullName>
    <label>Amount USD Equiv daily fx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>