force-app/main/default/objects/Transaction__c/fields/Amount_USD_FX_empty__c.field-meta.xml
<CustomField>
    <fullName>Amount_USD_FX_empty__c</fullName>
    <formula>IF (Amount_USD_Equiv_daily_fx__c=0 ,TRUE,FALSE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount USD FX empty</label>
    <type>Checkbox</type>
</CustomField>