force-app/main/default/objects/Transaction__c/fields/CCY_TXT__c.field-meta.xml
<CustomField>
    <fullName>CCY_TXT__c</fullName>
    <formula>TEXT( CCY__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CCY TXT</label>
    <type>Text</type>
</CustomField>