force-app/main/default/objects/Transaction__c/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <formula>TEXT( Account__r.Country_of_Incorporation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Country of Incorporation of the account</inlineHelpText>
    <label>Country of Incorporation</label>
    <type>Text</type>
</CustomField>