force-app/main/default/objects/Transaction__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <formula>DATEVALUE ( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>