force-app/main/default/objects/Transaction__c/fields/DebitCredit__c.field-meta.xml
<CustomField>
    <fullName>DebitCredit__c</fullName>
    <formula>If( Amount__c &lt;0,&quot;DR&quot;,&quot;CR&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DebitCredit</label>
    <type>Text</type>
</CustomField>