force-app/main/default/objects/Transaction__c/fields/E_wallet_exist__c.field-meta.xml
<CustomField>
    <fullName>E_wallet_exist__c</fullName>
    <formula>IF ( ISBLANK(  eWallet__c )= TRUE, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E-wallet exist</label>
    <type>Checkbox</type>
</CustomField>