force-app/main/default/objects/Transaction__c/fields/e_wallet_ID__c.field-meta.xml
<CustomField>
    <fullName>e_wallet_ID__c</fullName>
    <formula>eWallet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>e-wallet ID</label>
    <type>Text</type>
</CustomField>