force-app/main/default/objects/Transaction__c/fields/Ewallet_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Ewallet_Record_ID__c</fullName>
    <formula>eWallet__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ewallet Record ID</label>
    <type>Text</type>
</CustomField>