force-app/main/default/objects/Transaction__c/fields/eWallet_Trustee__c.field-meta.xml
<CustomField>
    <fullName>eWallet_Trustee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>eWallet Trustee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>eWallet_Trustee__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>eWallet_Trustee__c.CCY__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.Trustee__c</field>
            <operation>equals</operation>
            <valueField>eWallet_Trustee__c.Trustee__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>eWallet_Trustee__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>