force-app/main/default/objects/Transaction__c/fields/eWallet_Trustee_TXT__c.field-meta.xml
<CustomField>
    <fullName>eWallet_Trustee_TXT__c</fullName>
    <formula>IF (  TEXT(Trustee__c) = &quot;Amicorp&quot;, eWallet__r.Amicorp_E_wallet__c, eWallet__r.Camelot_e_wallet__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eWallet Trustee TXT</label>
    <type>Text</type>
</CustomField>