force-app/main/default/objects/Transaction__c/fields/External_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>External Reference Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>