force-app/main/default/objects/Transaction__c/fields/Full_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Id__c</fullName>
    <formula>CasesafeId(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Id</label>
    <type>Text</type>
</CustomField>