force-app/main/default/objects/Transaction__c/fields/Funder_First_contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Funder_First_contact_Email__c</fullName>
    <label>Funder First contact Email</label>
    <type>Email</type>
</CustomField>