force-app/main/default/objects/Transaction__c/fields/FX_Contract__c.field-meta.xml
<CustomField>
    <fullName>FX_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FX Contract</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>FX_Contract__c.CCY_Target__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CCY__c</field>
            <operation>equals</operation>
            <valueField>FX_Contract__c.CCY_Origination__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FX_Contract__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>