force-app/main/default/objects/Transaction__c/fields/FX_conversion_rate_calculated__c.field-meta.xml
<CustomField>
    <fullName>FX_conversion_rate_calculated__c</fullName>
    <formula>IF (CCY_TXT__c =&quot;USD&quot;,1, FX_rate_conversion__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX conversion rate calculated</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>