force-app/main/default/objects/Transaction__c/fields/FX_rate_conversion__c.field-meta.xml
<CustomField>
    <fullName>FX_rate_conversion__c</fullName>
    <label>FX rate conversion</label>
    <precision>17</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>