force-app/main/default/objects/Transaction__c/fields/FX_USD_Rate_Daily__c.field-meta.xml
<CustomField>
    <fullName>FX_USD_Rate_Daily__c</fullName>
    <formula>IF (   CCY_TXT__c  =&quot;USD&quot;, Amount__c ,
  
IF ( Amount_USD_FX_empty__c = FALSE,  Amount_USD_Equiv_daily_fx__c ,(  FX_conversion_rate_calculated__c   * Amount__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX USD Rate Daily Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>