force-app/main/default/objects/Transaction__c/fields/hash__c.field-meta.xml
<CustomField>
    <fullName>hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>hash</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>