force-app/main/default/objects/Transaction__c/fields/invoice_advance_transfer_date__c.field-meta.xml
<CustomField>
    <fullName>invoice_advance_transfer_date__c</fullName>
    <formula>Invoice_Finance_Deal__r.advance_send_to_supplier_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice advance transfer date</label>
    <type>Date</type>
</CustomField>