force-app/main/default/objects/Transaction__c/fields/invoice_amount__c.field-meta.xml
<CustomField>
    <fullName>invoice_amount__c</fullName>
    <formula>Invoice_Finance_Deal__r.invoice_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>