force-app/main/default/objects/Transaction__c/fields/Invoice_buyer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_buyer__c</fullName>
    <formula>Invoice_Finance_Deal__r.buyer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice buyer</label>
    <type>Text</type>
</CustomField>