force-app/main/default/objects/Transaction__c/fields/Invoice_Finance_Deal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Finance Deal</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>invoice_finance_deal__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>