force-app/main/default/objects/Transaction__c/fields/Invoice_Finance_Deal_Exist__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Finance_Deal_Exist__c</fullName>
    <formula>IF ( ISBLANK( Invoice_Finance_Deal__c )= TRUE, FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Finance Deal Exist</label>
    <type>Checkbox</type>
</CustomField>