force-app/main/default/objects/Transaction__c/fields/Invoice_Financing_Deal_name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Financing_Deal_name__c</fullName>
    <formula>if( isblank(Invoice_Finance_Deal__c),&quot;&quot;, Invoice_Finance_Deal__r.Invoice_name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Financing Deal name</label>
    <type>Text</type>
</CustomField>