force-app/main/default/objects/Transaction__c/fields/invoice_financing_deal_phase__c.field-meta.xml
<CustomField>
    <fullName>invoice_financing_deal_phase__c</fullName>
    <formula>text( Invoice_Finance_Deal__r.Phase__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice financing deal phase</label>
    <type>Text</type>
</CustomField>