force-app/main/default/objects/Transaction__c/fields/invoice_financing_deal_status__c.field-meta.xml
<CustomField>
    <fullName>invoice_financing_deal_status__c</fullName>
    <formula>Invoice_Finance_Deal__r.auto_status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>invoice financing deal status</label>
    <type>Text</type>
</CustomField>