force-app/main/default/objects/Transaction__c/fields/Invoice_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Product_Type__c</fullName>
    <formula>IF( CONTAINS(Invoice_Finance_Deal__r.Product_type__c, &quot;Reverse&quot;), &quot;Reverse Factoring&quot;, &quot;Factoring&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Product Type</label>
    <type>Text</type>
</CustomField>