force-app/main/default/objects/Transaction__c/fields/Is_USD__c.field-meta.xml
<CustomField>
    <fullName>Is_USD__c</fullName>
    <formula>ISPICKVAL(CCY__c , &apos;USD&apos;)</formula>
    <label>Is USD</label>
    <type>Checkbox</type>
</CustomField>