force-app/main/default/objects/Transaction__c/fields/isArchived__c.field-meta.xml
<CustomField>
    <fullName>isArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean to archive past transactions, in order to unload the roller helper which calculated eWallet balances.
When transactions are archived, a new transaction must be created with amount equals to the sum of archived transactions to reflect the amounts of archived transactions in the eWallet balance.</description>
    <label>isArchived</label>
    <type>Checkbox</type>
</CustomField>