force-app/main/default/objects/Transaction__c/fields/Notes_For_Legal_Fee__c.field-meta.xml
<CustomField>
    <fullName>Notes_For_Legal_Fee__c</fullName>
    <label>Invoice Number for legal recovery</label>
    <length>75</length>
    <type>Text</type>
</CustomField>