force-app/main/default/objects/Transaction__c/fields/Passthrough_invoice__c.field-meta.xml
<CustomField>
    <fullName>Passthrough_invoice__c</fullName>
    <formula>Invoice_Finance_Deal__r.Passthrough_auto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passthrough invoice</label>
    <type>Checkbox</type>
</CustomField>