force-app/main/default/objects/Transaction__c/fields/previous_hash__c.field-meta.xml
<CustomField>
    <fullName>previous_hash__c</fullName>
    <formula>Previous_Transaction__r.hash__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>previous hash</label>
    <type>Text</type>
</CustomField>