force-app/main/default/objects/Transaction__c/fields/Previous_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Previous_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transactions (Previous Transaction)</relationshipLabel>
    <relationshipName>Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>