force-app/main/default/objects/Transaction__c/fields/Ready_for_email__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for email</label>
    <type>Checkbox</type>
</CustomField>