force-app/main/default/objects/Transaction__c/fields/Related_Tranche_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Related_Tranche_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Tranche Transaction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Invoice_Allocation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Invoice_Allocation__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Related Tranche Transactions</relationshipLabel>
    <relationshipName>RelatedTrancheTransactions</relationshipName>
    <type>Lookup</type>
</CustomField>