force-app/main/default/objects/Transaction__c/fields/Related_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Related_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Transaction</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Invoice_Finance_Deal__c</field>
            <operation>equals</operation>
            <valueField>Transaction__c.Invoice_Finance_Deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>