force-app/main/default/objects/Transaction__c/fields/Related_Transaction_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Transaction_Account__c</fullName>
    <formula>Related_Transaction__r.Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Transaction Account</label>
    <type>Text</type>
</CustomField>