force-app/main/default/objects/Transaction__c/fields/Related_Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Transaction_Amount__c</fullName>
    <formula>Related_Transaction__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>