force-app/main/default/objects/Transaction__c/fields/Related_Transaction_CCY__c.field-meta.xml
<CustomField>
    <fullName>Related_Transaction_CCY__c</fullName>
    <formula>text(Related_Transaction__r.CCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Transaction CCY</label>
    <type>Text</type>
</CustomField>