force-app/main/default/objects/Transaction__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <formula>IF (
OR ( TEXT(Type__c )=&quot;054.Invoice Discount Amount Overdue&quot;, TEXT(Type__c)=&quot;062.Transaction Fees overdue&quot;)
, Effective_Date__c , Invoice_Finance_Deal__r.Funded_Date_Auto__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>