force-app/main/default/objects/Transaction__c/fields/Tranche_amount__c.field-meta.xml
<CustomField>
    <fullName>Tranche_amount__c</fullName>
    <label>Tranche amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>