force-app/main/default/objects/Transaction__c/fields/Tranche_amount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Tranche_amount_percentage__c</fullName>
    <label>Tranche amount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>