force-app/main/default/objects/Transaction__c/fields/Tranche_Name__c.field-meta.xml
<CustomField>
    <fullName>Tranche_Name__c</fullName>
    <label>Tranche Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>