force-app/main/default/objects/Transaction__c/fields/transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>transaction_ID__c</fullName>
    <formula>IF( ISBLANK(transaction_link_id__c) , left(Id,15) ,  left(transaction_link_id__c,15) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>transaction ID</label>
    <type>Text</type>
</CustomField>