force-app/main/default/objects/Transaction__c/fields/transaction_link_id__c.field-meta.xml
<CustomField>
    <fullName>transaction_link_id__c</fullName>
    <label>transaction link id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>