force-app/main/default/objects/Transaction__c/fields/Trustee__c.field-meta.xml
<CustomField>
    <fullName>Trustee__c</fullName>
    <description>Trustee name for this transaction</description>
    <inlineHelpText>Trustee name for this transaction, my be the same as invoice trustee</inlineHelpText>
    <label>Trustee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amicorp Escrow</fullName>
                <default>true</default>
                <label>Amicorp Escrow</label>
            </value>
            <value>
                <fullName>Amicorp Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>