force-app/main/default/objects/Transaction__c/fields/Trustee_Account_TXT__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Account_TXT__c</fullName>
    <formula>TEXT(Trustee__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trustee Account TXT</label>
    <type>Text</type>
</CustomField>