force-app/main/default/objects/Transaction__c/fields/Trustee_Approved__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trustee Approved</label>
    <type>Checkbox</type>
</CustomField>