force-app/main/default/objects/Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01.Invoice Purchase</fullName>
            </value>
            <value>
                <fullName>02.Invoice Advance Amount</fullName>
            </value>
            <value>
                <fullName>03.Invoice Repayment</fullName>
            </value>
            <value>
                <fullName>031.Partial Payment Topup</fullName>
            </value>
            <value>
                <fullName>032.Partial Payment reimbursement</fullName>
            </value>
            <value>
                <fullName>04.Invoice Capital Repayment</fullName>
            </value>
            <value>
                <fullName>05.Invoice Discount Amount</fullName>
            </value>
            <value>
                <fullName>051.Agent Commission on Discount Amount</fullName>
            </value>
            <value>
                <fullName>052.discount amount fees</fullName>
            </value>
            <value>
                <fullName>053.discount amount fees overdue</fullName>
            </value>
            <value>
                <fullName>053.Master Agent Commission on Discount Amount</fullName>
            </value>
            <value>
                <fullName>054.Invoice Discount Amount Overdue</fullName>
            </value>
            <value>
                <fullName>06.Transaction Fee</fullName>
            </value>
            <value>
                <fullName>061.Agent Commission on Transaction Fee</fullName>
                <label>061.Origination Agent Commission</label>
            </value>
            <value>
                <fullName>062.Transaction Fees overdue</fullName>
            </value>
            <value>
                <fullName>07.Credit Insurance</fullName>
            </value>
            <value>
                <fullName>08.Invoice Balance Payment</fullName>
            </value>
            <value>
                <fullName>09.GST transaction</fullName>
            </value>
            <value>
                <fullName>20.Legal fees</fullName>
            </value>
            <value>
                <fullName>60.Intra-transfer</fullName>
            </value>
            <value>
                <fullName>70.Deposit</fullName>
            </value>
            <value>
                <fullName>80.Withdrawal</fullName>
            </value>
            <value>
                <fullName>88.Annual membership fee</fullName>
            </value>
            <value>
                <fullName>89.Maintenance fee</fullName>
            </value>
            <value>
                <fullName>888.Additional buyer onboarding fee</fullName>
            </value>
            <value>
                <fullName>90.Bank Fees</fullName>
            </value>
            <value>
                <fullName>99.Adjustment</fullName>
            </value>
            <value>
                <fullName>999. Past balance of archived transactions</fullName>
            </value>
            <value>
                <fullName>01.Invoice Purchase (Tr)</fullName>
            </value>
            <value>
                <fullName>04.Invoice Capital Repayment (Tr)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>