force-app/main/default/objects/Transaction__c/fields/Update_Tranche_Number__c.field-meta.xml
<CustomField>
    <fullName>Update_Tranche_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To tick to take in consideration a Tranche Number from allocation if needed</inlineHelpText>
    <label>Update Tranche Number</label>
    <type>Checkbox</type>
</CustomField>