force-app/main/default/objects/Transaction__c/fields/Updated_by_Flow__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to check if the transaction has been updated by the flow update transaction</description>
    <inlineHelpText>to check if the transaction has been updated by the flow update transaction  ( for Maintenance)</inlineHelpText>
    <label>Updated by Flow</label>
    <type>Checkbox</type>
</CustomField>